; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/ath79/image/lzma-loader/src/extr_cache.c_flush_cache.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/ath79/image/lzma-loader/src/extr_cache.c_flush_cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CONFIG_CACHELINE_SIZE = common dso_local global i64 0, align 8
@Hit_Writeback_Inv_D = common dso_local global i32 0, align 4
@Hit_Invalidate_I = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @flush_cache(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %8 = load i64, i64* @CONFIG_CACHELINE_SIZE, align 8
  store i64 %8, i64* %5, align 8
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* %5, align 8
  %11 = sub i64 %10, 1
  %12 = xor i64 %11, -1
  %13 = and i64 %9, %12
  store i64 %13, i64* %6, align 8
  %14 = load i64, i64* %3, align 8
  %15 = load i64, i64* %4, align 8
  %16 = add i64 %14, %15
  %17 = sub i64 %16, 1
  %18 = load i64, i64* %5, align 8
  %19 = sub i64 %18, 1
  %20 = xor i64 %19, -1
  %21 = and i64 %17, %20
  store i64 %21, i64* %7, align 8
  br label %22

22:                                               ; preds = %2, %33
  %23 = load i32, i32* @Hit_Writeback_Inv_D, align 4
  %24 = load i64, i64* %6, align 8
  %25 = call i32 @cache_op(i32 %23, i64 %24)
  %26 = load i32, i32* @Hit_Invalidate_I, align 4
  %27 = load i64, i64* %6, align 8
  %28 = call i32 @cache_op(i32 %26, i64 %27)
  %29 = load i64, i64* %6, align 8
  %30 = load i64, i64* %7, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %33

32:                                               ; preds = %22
  br label %37

33:                                               ; preds = %22
  %34 = load i64, i64* %5, align 8
  %35 = load i64, i64* %6, align 8
  %36 = add i64 %35, %34
  store i64 %36, i64* %6, align 8
  br label %22

37:                                               ; preds = %32
  ret void
}

declare dso_local i32 @cache_op(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
